--- a/tasks/general-last.yml
+++ b/tasks/general-last.yml
@@ -1,3 +1,8 @@
 ---
 - name: Create public_html directory
-  file: path=/home/otsmanager/www/public_html owner=otsmanager group=otsmanager mode=0755 state=directory
+  file:
+    path: /home/otsmanager/www/public_html
+    owner: otsmanager
+    group: otsmanager
+    mode: 0755
+    state: directory
