--- a/tasks/systemd.yml
+++ b/tasks/systemd.yml
@@ -1,32 +1,79 @@
 ---
-- name: Install /etc/systemd/user/dbus.socket
-  template: src=systemd/user_dbus.socket dest=/etc/systemd/user/dbus.socket owner=root group=root mode=0644
-
-- name: Install /etc/systemd/user/dbus.service
-  template: src=systemd/user_dbus.service dest=/etc/systemd/user/dbus.service owner=root group=root mode=0644
-
-- name: Create /etc/systemd/system/user@.service.d
-  file: path=/etc/systemd/system/user@.service.d state=directory
-
-- name: Install /etc/systemd/system/user@.service.d/dbus.conf
-  template: src=systemd/user_service_dbus.conf dest=/etc/systemd/system/user@.service.d/dbus.conf owner=root group=root mode=0644
-
-- name: Install /etc/systemd/system/user@.service.d/accounting.conf
-  template: src=systemd/user_service_accounting.conf dest=/etc/systemd/system/user@.service.d/accounting.conf owner=root group=root mode=0644
-
-- name: Install /etc/systemd/system/user@.service.d/security.conf
-  template: src=systemd/user_service_security.conf dest=/etc/systemd/system/user@.service.d/security.conf owner=root group=root mode=0644
-
-- name: Enable dbus.socket for users
-  command: systemctl --global enable dbus.socket creates=/etc/systemd/user/default.target.wants/dbus.socket
+# journal config
+- name: Create /var/log/journal
+  file:
+    path: /var/log/journal
+    state: directory
+    owner: root
+    group: systemd-journal
+    mode: 2755
 
 - name: Create /etc/systemd/journald.conf.d
-  file: path=/etc/systemd/journald.conf.d state=directory
-
-- name: Create /var/log/journal
-  file: path=/var/log/journal state=directory owner=root group=systemd-journal mode=2755
+  file:
+    path: /etc/systemd/journald.conf.d
+    state: directory
 
 - name: Install /etc/systemd/journald.conf.d/journald.conf
-  template: src=systemd/journald.conf dest=/etc/systemd/journald.conf.d/journald.conf owner=root group=root mode=0644
+  template:
+    src: systemd/journald.conf
+    dest: /etc/systemd/journald.conf.d/journald.conf
+    owner: root
+    group: root
+    mode: 0644
   notify: restart systemd-journald
- 
+
+# accounting
+- name: Create /etc/systemd/system/user@.service.d
+  file:
+    path: /etc/systemd/system/user@.service.d
+    state: directory
+
+- name: Install /etc/systemd/system/user@.service.d/accounting.conf
+  template:
+    src: systemd/user_service_accounting.conf
+    dest: /etc/systemd/system/user@.service.d/accounting.conf
+    owner: root
+    group: root
+    mode: 0644
+
+- name: Install /etc/systemd/system/user@.service.d/security.conf
+  template:
+    src: systemd/user_service_security.conf
+    dest: /etc/systemd/system/user@.service.d/security.conf
+    owner: root
+    group: root
+    mode: 0644
+
+# Only needed for Ubuntu 17.X and lower (not sure about 17.X but definitely 16.X)
+- name: Install /etc/systemd/user/dbus.socket
+  template:
+    src: systemd/user_dbus.socket
+    dest: /etc/systemd/user/dbus.socket
+    owner: root
+    group: root
+    mode: 0644
+  when: ansible_distribution_major_version|int < 18
+
+- name: Install /etc/systemd/user/dbus.service
+  template:
+    src: systemd/user_dbus.service
+    dest: /etc/systemd/user/dbus.service
+    owner: root
+    group: root
+    mode: 0644
+  when: ansible_distribution_major_version|int < 18
+
+- name: Install /etc/systemd/system/user@.service.d/dbus.conf
+  template:
+    src: systemd/user_service_dbus.conf
+    dest: /etc/systemd/system/user@.service.d/dbus.conf
+    owner: root
+    group: root
+    mode: 0644
+  when: ansible_distribution_major_version|int < 18
+
+- name: Enable dbus.socket for users
+  command: systemctl --global enable dbus.socket
+  args:
+    creates: /etc/systemd/user/default.target.wants/dbus.socket
+  when: ansible_distribution_major_version|int < 18
