--- a/tasks/wine.yml
+++ b/tasks/wine.yml
@@ -3,4 +3,7 @@
   command: dpkg --add-architecture i386
 
 - name: Install wine
-  apt: pkg=wine state=latest update_cache=yes
+  apt:
+    pkg: wine
+    state: latest
+    update_cache: yes
