--- a/tasks/phpmyadmin.yml
+++ b/tasks/phpmyadmin.yml
@@ -21,7 +21,7 @@
   debconf:
     name: phpmyadmin
     question: phpmyadmin/mysql/admin-pass
-    value: "{{ randompass.stdout }}"
+    value: ''
     vtype: password
 
 - name: Set preseed info phpmyadmin/mysql/app-pass
@@ -42,45 +42,3 @@
   apt:
     pkg: phpmyadmin
     state: latest
-
-- name: Copy nginx configuration for phpmyadmin vhost (PHP 5)
-  template:
-    src: templates/phpmyadmin-vhost.conf
-    dest: /etc/nginx/sites-available/phpmyadmin
-  when: ansible_distribution_major_version|int == 15
-  notify: restart nginx
-
-- name: Copy nginx configuration for phpmyadmin vhost (PHP 7.0)
-  template:
-    src: templates/phpmyadmin-vhost-php7.conf
-    dest: /etc/nginx/sites-available/phpmyadmin
-  when: ansible_distribution_major_version|int == 16 or ansible_distribution_major_version|int == 17
-  notify: restart nginx
-
-- name: Copy nginx configuration for phpmyadmin vhost (PHP 7.2)
-  template:
-    src: templates/phpmyadmin-vhost-php72.conf
-    dest: /etc/nginx/sites-available/phpmyadmin
-  when: ansible_distribution_major_version|int == 18
-  notify: restart nginx
-
-- name: Enable phpmyadmin vhost
-  file:
-    src: /etc/nginx/sites-available/phpmyadmin
-    dest: /etc/nginx/sites-enabled/phpmyadmin
-    owner: root
-    group: root
-    state: link
-  notify: restart nginx
-
-# phpmyadmin depends on php5-mcrypt but it's not enabled automatically
-- name: Enable mcrypt for PHP5-FPM
-  file:
-    src: ../../mods-available/mcrypt.ini
-    dest: /etc/php5/fpm/conf.d/20-mcrypt.ini
-    owner: root
-    group: root
-    state: link
-    force: true
-  notify: restart php5-fpm
-  when: ansible_distribution_major_version|int < 16
