--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -1,36 +1,94 @@
 server {
     listen       80 default_server;
+    listen       443 ssl default_server;
     server_name  _;
     root /home/otsmanager/www/public_html;
+
+    ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
+    ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
+    ssl_protocols TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
+    ssl_ecdh_curve secp384r1;
+    ssl_session_timeout  10m;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_tickets off;
+    # ssl_stapling on;
+    # ssl_stapling_verify on;
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
 
     client_max_body_size 64M;
     error_page 404 @notfound;
 
     location / {
-            index index.html index.php;
-            try_files $uri $uri/ /index.php?$args;
+        index index.html index.php;
+        try_files $uri $uri/ /index.php?$args;
     }
 
     location ~* \.(gif|jpg|jpeg|png|css)$ {
-            expires max;
+        expires max;
     }
-    
+
     location ~* \.(js|css)$ {
-            expires 1d;
+        expires 1d;
     }
 
     location ~ \.php$ {
-        try_files               $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_index           index.php;
-        fastcgi_pass            unix:/var/run/php-fpm-otsmanager.sock;
+        try_files               $fastcgi_script_name =404;
+        fastcgi_pass            unix:/var/run/php/php-fpm-otsmanager.sock;
         fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include                 fastcgi_params;
-        fastcgi_buffers         16 16k; 
+        fastcgi_buffers         16 16k;
         fastcgi_buffer_size     32k;
+        include                 fastcgi_params;
+        # Bypass the fact that try_files resets $fastcgi_path_info
+        # see: http://trac.nginx.org/nginx/ticket/321
+        set $path_info $fastcgi_path_info;
+        fastcgi_param PATH_INFO $path_info;
     }
-    
+
     location @notfound {
         return 404 "The page or file you requested was not found. If this is your server, make sure you placed it under /home/otsmanager/www/public_html directory.";
+    }
+
+    # phpmyadmin uses non-obvious
+    location /pma3380 {
+        alias /usr/share/phpmyadmin;
+        client_max_body_size 64M;
+
+        index index.html index.php;
+        try_files $uri $uri/ /index.php?$args;
+
+        location ~ \.php$ {
+            try_files                 $fastcgi_script_name =404;
+            fastcgi_split_path_info   ^(.+\.php)(/.+)$;
+            fastcgi_index             index.php;
+            fastcgi_pass              unix:/var/run/php/{{ php_fpm_package_name }}.sock;
+            fastcgi_param             SCRIPT_FILENAME $request_filename;
+            include                   fastcgi_params;
+            # Bypass the fact that try_files resets $fastcgi_path_info
+            # see: http://trac.nginx.org/nginx/ticket/321
+            set $path_info $fastcgi_path_info;
+            fastcgi_param PATH_INFO $path_info;
+        }
+
+        location ~* \.(gif|jpg|jpeg|png|css)$ {
+            expires max;
+        }
+
+        location ~* \.(js|css)$ {
+            expires 1d;
+        }
+
+        location /pma3380/libraries {
+            deny all;
+        }
+
+        location /pma3380/setup {
+            deny all;
+        }
     }
 }
