--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -26,10 +26,10 @@ server {
 
     location / {
         index index.html index.php;
-        try_files $uri $uri/ /index.php?$args;
+        try_files $uri $uri/ /index.php?$args =404;
     }
 
-    location ~* \.(gif|jpg|jpeg|png|css)$ {
+    location ~* \.(gif|jpg|jpeg|png|bmp|css)$ {
         expires max;
     }
 
@@ -52,6 +52,7 @@ server {
 
     location @notfound {
         return 404 "The page or file you requested was not found. If this is your server, make sure you placed it under /home/otsmanager/www/public_html directory.";
+        add_header Content-Type text/plain always;
     }
 
     # phpmyadmin uses non-obvious
