--- a/tasks/wine.yml
+++ b/tasks/wine.yml
@@ -11,7 +11,7 @@
 
 - name: Install wine-development
   apt:
-    pkg: wine
+    pkg: wine-development
     state: latest
     update_cache: yes
   when: ansible_distribution_major_version|int >= 18
