nginx: Throttle per-IP connections for PHP

--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -1,3 +1,5 @@
+limit_req_zone $binary_remote_addr zone=req_zone:10m rate=5r/s;
+
 server {
     listen       80 default_server;
     listen       443 ssl default_server;
@@ -38,6 +40,7 @@ server {
     }
 
     location ~ \.php$ {
+        limit_req zone=req_zone burst=10 nodelay;
         try_files               $fastcgi_script_name =404;
         fastcgi_pass            unix:/var/run/php/php-fpm-otsmanager.sock;
         fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -64,6 +67,7 @@ server {
         try_files $uri $uri/ /index.php?$args;
 
         location ~ \.php$ {
+            limit_req zone=req_zone burst=10 nodelay;
             try_files                 $fastcgi_script_name =404;
             fastcgi_split_path_info   ^(.+\.php)(/.+)$;
             fastcgi_index             index.php;
