--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -8,17 +8,39 @@ server {
 
     ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
     ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
-    ssl_protocols TLSv1.2;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
-    ssl_ecdh_curve secp384r1;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_ecdh_curve X25519:prime256v1:secp384r1;
     ssl_session_timeout  10m;
     ssl_session_cache shared:SSL:10m;
     ssl_session_tickets off;
-    # ssl_stapling on;
-    # ssl_stapling_verify on;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
-    resolver_timeout 5s;
+
+    # https://wiki.mozilla.org/Security/Server_Side_TLS#OCSP_Stapling
+    # https://tools.ietf.org/html/rfc6066#section-8
+    # https://nginx.org/en/docs/http/ngx_http_ssl_module.html#ssl_stapling
+    #
+    # (1) Use Cloudflare 1.1.1.1 DNS resolver
+    #     https://developers.cloudflare.com/1.1.1.1/setting-up-1.1.1.1/
+    #
+    # (2) Use Google 8.8.8.8 DNS resolver
+    #     https://developers.google.com/speed/public-dns/docs/using
+    #
+    # (3) Use Dyn DNS resolver
+    #     https://help.dyn.com/internet-guide-setup/
+    ssl_stapling on;
+    ssl_stapling_verify on;
+
+    resolver
+    # (1)
+      1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001]
+    # (2)
+      8.8.8.8 8.8.4.4 [2001:4860:4860::8888] [2001:4860:4860::8844]
+    # (3)
+      # 216.146.35.35 216.146.36.36
+      valid=60s;
+    resolver_timeout 2s;
+
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
@@ -28,15 +50,11 @@ server {
 
     location / {
         index index.html index.php;
-        try_files $uri $uri/ /index.php?$args =404;
+        try_files $uri $uri/ /index.php?$args;
     }
 
-    location ~* \.(gif|jpg|jpeg|png|bmp|css)$ {
+    location ~* \.(gif|jpg|jpeg|png|bmp|js|css)$ {
         expires max;
-    }
-
-    location ~* \.(js|css)$ {
-        expires 1d;
     }
 
     location ~ \.php$ {
@@ -80,12 +98,8 @@ server {
             fastcgi_param PATH_INFO $path_info;
         }
 
-        location ~* \.(gif|jpg|jpeg|png|css)$ {
+        location ~* \.(gif|jpg|jpeg|png|js|css)$ {
             expires max;
-        }
-
-        location ~* \.(js|css)$ {
-            expires 1d;
         }
 
         location /pma3380/libraries {
