--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -14,6 +14,19 @@
   when: ansible_distribution_major_version|int > 15
   notify: restart mysql
 
+- name: Create /etc/systemd/system/mariadb.service.d/
+  file:
+    path: /etc/systemd/system/mariadb.service.d/
+    state: directory
+
+- name: Create /etc/systemd/system/mariadb.service.d/user-wait.conf
+  copy:
+    dest: /etc/systemd/system/mariadb.service.d/user-wait.conf
+    content: |
+      [Unit]
+      Before=user@1000.service
+  notify: reload systemd
+
 - name: Start Mysql Service
   service:
     name: mysql
